--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css'; 
+* {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.main-content {
+    margin-top: 150px;
+    
+}
+
+a {
+    color: transparent;
+    text-decoration: none;
+}
+
+.centered {
+    display: grid;
+    place-items: center;
+}
+
+
+h3{
+    text-align: center;
+}
+
+.footer {
+    position: fixed;
+}
