--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -69,7 +69,7 @@
                                 (change)="onFileSelected($event)" multiple required="">
                             <div *ngIf=" itemForm.get('img')!.invalid && (itemForm.get('img')!.dirty || itemForm.get('img')!.touched)"
                                 class="error">
-                                Add at least one picture
+                                Add one picture
                             </div>
                         </div> 
                     </th>
