--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -2,7 +2,7 @@
 <div class="main-content">
     <h3>Result(s) for {{searchValue}}</h3>
     <div class="filter">
-        <app-filter [items]="items"></app-filter>
+        <app-sorting [items]="items"></app-sorting>
     </div>
     
     <div class="footer">*
