--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,10 +2,9 @@
 <div class="main-content">
     <h3>Home</h3>
     <div class="filter">
-        <app-filter [items]="items"></app-filter>
+        <app-sorting [items]="items"></app-sorting>
     </div>
-    
-    <div class="footer">
-        <app-item-cards [items]="items"></app-item-cards>
-    </div>
+
+    <app-item-cards [items]="items"></app-item-cards>
+
 </div>
