--- a/src/app/item-cards-history/item-cards-history.component.css
+++ b/src/app/item-cards-history/item-cards-history.component.css
@@ -31,7 +31,6 @@
 .footer {
     position: fixed;
     bottom: 0;
-    justify-content: center;
-    display: flex;
+    margin: 0 auto;
     width: 100%;
 }
