--- a/src/app/item-cards/item-cards.component.css
+++ b/src/app/item-cards/item-cards.component.css
@@ -48,7 +48,8 @@
     text-decoration: underline;
 }
 
-.list-btn {
+.list-btn,
+.paginator {
     display: flex;
     justify-content: center;
 }
@@ -118,12 +119,4 @@ button:disabled {
 
 .description {
     word-wrap: break-word;
-}
-
-.footer {
-    position: fixed;
-    bottom: 0;
-    justify-content: center;
-    display: flex;
-    width: 100%;
 }
