--- a/src/app/saved/saved.component.html
+++ b/src/app/saved/saved.component.html
@@ -1,10 +1,8 @@
 <app-nav-header></app-nav-header>
 <div class="main-content">
     <div class="filter">
-        <app-filter [items]="savedItem"></app-filter>
+        <app-sorting [items]="savedItem"></app-sorting>
     </div>
     <h3>Saved</h3>
-    <div class="footer">
-        <app-item-cards [items]="savedItem"></app-item-cards>
-    </div>
+    <app-item-cards [items]="savedItem"></app-item-cards>
 </div>
