--- a/src/app/nav-header/nav-header.component.html
+++ b/src/app/nav-header/nav-header.component.html
@@ -1,10 +1,10 @@
 <nav class="bar-container">
     <div class="col-sm-3">
-        <a routerLink="/home">
+        <a routerLink="/home" id="home">
             <div class="logo" >
 
                 <img src="assets/web-icon.png" class="web-icon">
-                Sell & Buy
+                Eshop
             </div>
         </a>
 
