--- a/src/app/item-cards/item-cards.component.css
+++ b/src/app/item-cards/item-cards.component.css
@@ -1,12 +1,12 @@
 .item-card {
-    height: auto;
-    max-height: 25%;
+    height: 380px;
     width: 18%;
     background-color: #facaca;
     margin: 10px 10px 5px 5px;
     border-radius: 10px;
     padding: 12px 12px;
     z-index: 0;
+    position: relative;
 }
 
 .item-card:hover {
@@ -30,7 +30,7 @@
 
 .img {
     margin-top: 10px;
-    height: 100%;
+    height: 145px;
     width: 100%;
 }
 
@@ -110,13 +110,18 @@ button:disabled {
     font-size: 25px;
 }
 
-.description,
-.price,
-.seller,
+
 .date {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
-.description {
-    word-wrap: break-word;
+
+
+.content-card {
+    position: absolute;
+    bottom: 0;
+}
+
+.content-card div {
+    margin-bottom: 15px;
 }
